attempt to fix bug 51882 (sig data w/ no signer infos)